# mem0-mcp-server

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  pyproject.toml
skills/: mem0-admin.md  mem0-memory.md
src/mem0_mcp/: auth.py  client.py  server.py
